--- a/package.json
+++ b/package.json
@@ -6,12 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "build:cf": "npx opennextjs-cloudflare build",
+    "deploy": "npx opennextjs-cloudflare deploy",
+    "preview": "npx opennextjs-cloudflare build && npx wrangler dev"
   },
   "dependencies": {
+    "@vercel/blob": "^2.1.0",
+    "firebase": "^12.8.0",
     "next": "16.1.6",
+    "openai": "^6.17.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -21,6 +28,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "wrangler": "^4.62.0"
   }
 }
