--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "preview": "npx opennextjs-cloudflare build && npx wrangler dev"
   },
   "dependencies": {
+    "@aws-sdk/client-lambda": "^3.993.0",
+    "@aws-sdk/client-s3": "^3.993.0",
+    "@aws-sdk/s3-request-presigner": "^3.993.0",
     "@stripe/stripe-js": "^8.7.0",
-    "@vercel/blob": "^2.1.0",
     "firebase": "^12.8.0",
     "next": "16.1.6",
     "openai": "^6.17.0",
@@ -24,6 +26,8 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@aws-sdk/client-iam": "^3.993.0",
+    "@aws-sdk/client-sts": "^3.993.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
