--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "firebase": "^12.8.0",
     "next": "16.1.6",
     "openai": "^6.17.0",
+    "plaid": "^41.3.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-plaid-link": "^4.1.1",
     "recharts": "^3.7.0",
     "stripe": "^20.3.1",
     "zod": "^4.3.6"
